@@ -19,31 +19,31 @@ public class ReverseVowelsOfAString {
     public static String reverseVowels(String s) {
         char asterisk = '*';
 
-        Set<Character> set = new HashSet<>(Arrays.asList(
+        Set<Character> set = Set.of(    // 모음 Set
             'a', 'e', 'i', 'o', 'u'
             , 'A', 'E', 'I', 'O', 'U'
-        ));
+        );
 
-        Stack<Character> stack = new Stack<>();
+        Stack<Character> stack = new Stack<>(); // 뒤집는 연산 대신 스택 사용
         StringBuilder sb = new StringBuilder();
 
         for(int i = 0 ; i < s.length() ; i++) {
             char c = s.charAt(i);
 
-            if(set.contains(c)) {
-                sb.append(asterisk);
-                stack.push(c);
-            } else {
-                sb.append(c);
+            if(set.contains(c)) {   // 모음인 경우
+                sb.append(asterisk);    // sb에 모음 대신 * 추가
+                stack.push(c);          // 스택에 모음 추가
+            } else {    // 자음인 경우
+                sb.append(c);   // sb에 자음 추가
             }
         }
 
         for(int i = 0 ; i < sb.length() ; i++) {
             char c = sb.charAt(i);
 
-            if(c == asterisk){
-                char vowel = stack.pop();
-                sb.setCharAt(i, vowel);
+            if(c == asterisk){  // *인 경우
+                char vowel = stack.pop();   // 스택에서 모음 추출
+                sb.setCharAt(i, vowel);     // * 대신에 모음 추가
             }
         }
 
